crates/compiler/tests/parse_errors/custom_bar.txt
-- UNFINISHED CUSTOM TYPE ----------------------------------------- src/Main.elm

I am partway through parsing a custom type, but I got stuck here:

3| type Foo = A B | 
                   ^
I just saw a vertical bar, so I was expecting to see another variant defined
next.

Note: Here is an example of a valid `type` declaration for reference:

    type Status
      = Failure
      | Waiting
      | Success String

This defines a new `Status` type with three variants. This could be useful if we
are waiting for an HTTP request. Maybe we start with `Waiting` and then switch
to `Failure` or `Success "message from server"` depending on how things go.
Notice that the Success variant has some associated data, allowing us to store a
String if the request goes well!

